# sepp-mini

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  install.sh  justfile  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/sepp-agent/: Cargo.toml
crates/sepp-agent/src/: lib.rs  resources.rs  subagent.rs
crates/sepp-agent/tests/: agent_loop.rs  subagent.rs
crates/sepp-cli/: Cargo.toml
crates/sepp-cli/src/: main.rs  session.rs  tui.rs
crates/sepp-core/: Cargo.toml
crates/sepp-core/src/: error.rs  lib.rs  message.rs  model.rs  tool.rs
crates/sepp-hooks/: Cargo.toml
crates/sepp-hooks/src/: lib.rs  rhai_host.rs
crates/sepp-mcp/: Cargo.toml
crates/sepp-mcp/examples/: probe.rs
crates/sepp-mcp/src/: lib.rs
crates/sepp-policy/: Cargo.toml
crates/sepp-policy/src/: lib.rs  sandbox.rs  secrets.rs
crates/sepp-provider/: Cargo.toml
crates/sepp-provider/src/: anthropic.rs  lib.rs  models.rs  openai.rs  sse.rs  zai.rs
crates/sepp-provider/tests/: anthropic_sse.rs  local_reasoning_fallback.rs  zai_live.rs  zai_sse.rs
crates/sepp-provider/tests/fixtures/: anthropic_basic.sse  anthropic_thinking.sse  ollama_reasoning.sse  openai_basic.sse  openai_repeated_index.sse  zai_basic.sse
crates/sepp-session/: Cargo.toml
crates/sepp-session/src/: lib.rs  sqlite.rs
crates/sepp-tools/: Cargo.toml
crates/sepp-tools/src/: bash.rs  edit.rs  file_queue.rs  lib.rs  read.rs  truncate.rs  util.rs  write.rs
crates/sepp-wasm/: Cargo.toml
crates/sepp-wasm/src/: lib.rs
