[package]
name = "sepp-agent"
version = "0.1.11"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent-Loop, Tool-Dispatch und Orchestrierung für sepp mini"

[dependencies]
sepp-core = { path = "../sepp-core" }
sepp-provider = { path = "../sepp-provider" }
sepp-tools = { path = "../sepp-tools" }
sepp-session = { path = "../sepp-session" }
sepp-hooks = { path = "../sepp-hooks" }

serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
