[package]
name = "sepp-core"
version = "0.1.10"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Kerntypen und reine Logik für sepp mini (kein I/O, kein tokio)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
