[package]
name = "sepp-mcp"
version = "0.1.14"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP-Client (Tier 3) für sepp mini — Remote-Tools via rmcp"

[dependencies]
sepp-core = { path = "../sepp-core" }
sepp-tools = { path = "../sepp-tools" }
sepp-policy = { path = "../sepp-policy" }

# rmcp = offizielles Rust-MCP-SDK. Features gegen die aktuelle Crate-Quelle verifiziert (1.8).
rmcp = { version = "=1.8.0", features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "reqwest",                # aktiviert rustls für reqwest (sonst kein TLS → connect-Fehler)
    "transport-child-process",
] }

serde = { workspace = true }
serde_json = { workspace = true }
toml = "=0.8.23"
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
