[package]
name = "sepp-provider"
version = "0.1.14"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Provider-Abstraktion und LLM-Adapter für sepp mini"

[features]
default = ["anthropic"]
anthropic = []
openai = []          # OpenAI-kompatibel (Chat-Completions)
local = ["openai"]   # lokale Endpunkte (Ollama/vLLM) — gleicher Adapter via base_url
zai = ["openai"]     # z.ai / Zhipu-GLM — dedizierter Connector, teilt den OpenAI-SSE-Decoder
google = []          # Phase 5 (offen)

[dependencies]
sepp-core = { path = "../sepp-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
